# wordle

./: .gitignore  Cargo.toml  package.json
assets/: all_wordle_words  words.csv
data/: words.json
src/: grade.rs  group.rs  main.py  main.rs  printing.rs  word.rs  wordle.rs
src/css/: index.css  primel.css  wordle.css  wordle_tool.css
src/html/: index.html  primel.html  wordle.html  wordle_tool.html
src/js/: primel.js  primel_numbers.js  wordle.js  wordle_words.js
