[package]
name = "wordle_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.7"
anyhow = "1.0"
indicatif = "0.16.2"
log = "0.4.0"
env_logger = "0.8.4"
wild = "2.0.4"
clap-verbosity-flag = "1.0.1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.clap]
version = "3.0"
features = ["derive"]
